src/index.css
html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed, 
figure, figcaption, footer, header, hgroup, 
menu, nav, output, ruby, section, summary,
time, mark, audio, video, nav {
	margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	font: inherit;
	vertical-align: baseline;
  color: black;
  text-decoration: none;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure, 
footer, header, hgroup, menu, nav, section {
	display: block;
}
body {
	line-height: 1;
}
ol, ul {
	list-style: none;
}
blockquote, q {
	quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
	content: '';
	content: none;
}
table {
	border-collapse: collapse;
	border-spacing: 0;
}

body {
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
    sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
    monospace;
}

/* ----------------- Global Values ----------------- */

:root {
  --derek: rgb(217, 114, 11);
}

/* ----------------- Overall Website Structures ----------------- */


.container {
  margin: auto;
  width: 90%;
  max-width: 1280px;
  display: grid;
}

/* ----------------- Grid ----------------- */

.column-one, .column-two-even, .column-two-left-third, .column-two-left-forth, .column-two-right-third, .column-two-right-forth, .column-three-even, .column-four-even {
  display: grid;
  border: 1px solid green;
  padding: 2rem 0;
}

.column-two-even {
  grid-template-columns: repeat(2, 1fr);
}

.column-two-even div:first-child, 
.column-two-left-third div:first-child,
.column-two-left-forth div:first-child,
.column-three-even div:first-child,
.column-two-right-third div:first-child,
.column-two-right-forth div:first-child,
.column-four-even div:first-child 
{
  grid-column-start: 1;
  grid-column-end: 6;
  border: 1px solid purple;
  justify-self: center;
}

.column-two-even div:last-child, 
.column-two-left-third div:last-child,
.column-two-left-forth div:last-child,
.column-three-even div:last-child,
.column-two-right-third div:last-child,
.column-two-right-forth div:last-child,
.column-four-even div:last-child 
{
  grid-column-start: 1;
  grid-column-end: 6;
  border: 1px solid blue;
  justify-self: center;
}

.column-two-left-third {
  grid-template-columns: 2fr 1fr;
}

.column-two-left-forth {
  grid-template-columns: 3fr 1fr;
}

.column-two-right-third {
  grid-template-columns: 1fr 2fr;
}

.column-two-right-forth {
  grid-template-columns: 1fr 3fr;
}

.column-three-even {
  grid-template-columns: repeat(3, 1fr);
}

.column-four-even {
  grid-template-columns: repeat(4, 1fr);
}


/* ----------------- Background Images ----------------- */
.background-img-1 {
  background-image: url("./images/renato-pozzi-G4oGYy_ZcsQ-unsplash.jpg");
  background-color: white;
  background-size: cover;
  background-position: bottom;
  max-width: 100%;
  max-height: 100%;
  height: 250px;
}

.background-img-1 h1 {
  align-self: flex-end;
  justify-self: center;
}

.background-img-1 p {
  justify-self: center;
}

/* ----------------- Break out of container (Full-Width) ----------------- */

.full-width {
  left: 50%;
  margin-left: -50vw;
	margin-right: -50vw;
	max-width: 100vw;
	position: relative;
	right: 50%;
	width: 100vw;
}

/* ----------------- Fonts ----------------- */

h1, h2, h3, h4, h5, h6 {
  font-family: "source-sans-pro", sans-serif;
  text-transform: uppercase;
    /* 
  FOR HEADERS
  italic and normal
  font-weight of 400 or 700
  */
}

h1, h3, h5 {
  font-weight: 400;
}

h2, h4, h6 {
  font-weight: 700;
}

h5, h6 {
  font-style: italic;
}

h1 {
  font-size: 3rem;
}

h2 {
  font-size: 2rem;
}

h3 {
  font-size: 1.5rem;
}

h4 {
  font-size: 1.4rem;
}

h5 {
  font-size: 1.2rem;
}

h6 {
  font-size: 1rem;
}

p {
  font-family: "quasimoda", sans-serif;
  font-weight: 300;
  font-size: 1rem;
  /*
  FOR PARAGRAPHS OR SUBHEADINGS
  italic and normal
  quasimoda
  300, 400, 500, 600, 700, 800
  quasimode-2
  100, 900
  */
}

a {
  text-decoration: none;
}

/* ----------------- Navigation ----------------- */

.navigation {
  margin: auto;
  display: flex;
  justify-content: space-between;
  align-items: center;  
  width: 90%;
  max-width: 1280px;
  /* border: 3px solid var(--derek); */
  padding: 1rem 0;
}

.nav-item nav {
  display: flex;
  justify-content: space-between;
  list-style: none;
  gap: 2rem;
  align-items: flex-start;
}

.nav-item {
  /* border: 1px solid pink; */
  margin: 0;
  padding: 0;
}

.nav-item * {
  margin: 0;
  padding: 0;
}

.nav-mobile {
  display: none;
}

.nav-bottom {
  display: flex;
  align-items: flex-end;
}

.nav-bottom-menu nav * {
  padding: .2rem 0;
}

.nav-bottom-menu nav *:hover {
  padding-left: .1rem;
}


/* ----------------- Buttons ----------------- */

.button {
  position: relative;
  /* width: 100%; */
  /* height: 100%; */
}


.button:hover {
  /* background-color: green; */
  cursor: pointer;
}

.button-a {
  /* background-color: lightgray; */
  font-weight: 900;
  padding: 1rem 2rem;
  border: 1px solid green;
}

/* ----------------- Mobile Size ----------------- */
/* ----------------- Mobile Size ----------------- */
/* ----------------- Mobile Size ----------------- */


@media only screen and (max-width: 700px) {

  /* ----------------- Mobile Size - Overall Website Structure ----------------- */
  .container {
    width: 100%;
  }

  .column-one, 
  .column-two-even, 
  .column-two-left-third, 
  .column-two-left-forth, 
  .column-two-right-third, 
  .column-two-right-forth, 
  .column-three-even, 
  .column-four-even 
  {
    padding: 1rem;
    grid-template-columns: 1fr;
    
  }

  .column-two-even div, 
  .column-two-left-third div, 
  .column-two-left-forth div, 
  .column-two-right-third div, 
  .column-two-right-forth div, 
  .column-three-even div, 
  .column-four-even div 
  {
    grid-column: span 3;
  }

  .column-two-even div:nth-child(2) {
    grid-row: 3;
  }

  .navigation > :first-child {
    padding-left: 1rem;
  }


  /* ----------------- Mobile Size - Navigation ----------------- */
  /* Maybe move this to a module? -> Make things less cultered */

  .navigation {
    width: 100%;
  }

  .nav-desktop, .nav-button {
    display: none;
  }

  .nav-item nav {
    gap: 0;
    align-items: center;
  }

  .nav-item nav a {
    display: flex;
    align-items: center;
    padding-left: .5rem;
  }

  .nav-mobile {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    color: pink;
  }

  .nav-mobile nav {
    display: flex;
    flex-direction: column;
  }


  /*  */

  .nav-mobile nav {
    align-items: flex-start;
}


.toggler{
/* ALWAYS KEEPING THE TOGGLER OR THE CHECKBOX ON TOP OF EVERYTHING :  */
    z-index:4;
    height: 50px;
    width: 55px;
    position: absolute;
    top: 0;
    right: 0;
    cursor: pointer;
    opacity: 0;
}

.hamburger{
    position: absolute;
    top: 0;
    right: 0;
    height: 30px;
    width: 35px;
    padding: 0.6rem;
    z-index: 3;

/* FOR DISPLAYING EVERY ELEMENT IN THE CENTER : */

    display: flex;
    align-items: center;
    justify-content: center;
}

/* CREATING THE MIDDLE LINE OF THE HAMBURGER : */

.hamburger > div{
    position: relative;
    margin: 0;
    padding: 0;
    text-align: left;
    top: 0;
    left: 0;
    background: black;
    height: 1.7px;
    width: 60%;
    transition: all  0.4s ease;
}

/* CREATING THE TOP AND BOTTOM LINES : 
TOP AT -10PX ABOVE THE MIDDLE ONE AND BOTTOM ONE IS 10PX BELOW THE MIDDLE: */

.hamburger > div::before,
.hamburger > div::after{
    content: '';
    position: absolute;
    top: -10px;
    background: black;
    width: 100%;
    height: 1.5px;
    transition: all  0.4s ease;
}

.hamburger > div::after{
    top: 10px;
}

/* IF THE TOGGLER IS IN ITS CHECKED STATE, THEN SETTING THE BACKGROUND OF THE MIDDLE LAYER TO COMPLETE BLACK AND OPAQUE :  */

.toggler:checked + .hamburger > div{
    background: rgba(0,0,0,0);
}

.toggler:checked ~ .background {
    display: block;
}

.toggler:checked + .hamburger > div::before{
    top: 0;
    transform: rotate(45deg);
    background: black;
}

/* AND ROTATING THE TOP AND BOTTOM LINES :  */

.toggler:checked + .hamburger > div::after{
    top: 0;
    transform: rotate(135deg);
    background: black;
}


/* MAIN MENU WITH THE WHITE BACKGROUND AND THE TEXT :  */

.menu{
    position: fixed;
    z-index: 2;
    background: white;
    width: 0%;
    height: 100vh;
    right: 0;
    top: 0;
    border-left: 1px solid gray;

/* APPLYING TRANSITION TO THE MENU :  */

    transition: all 0.4s ease;
    
}

/* IF THE TOGGLER IS CHECKED, THEN INCREASE THE WIDTH OF THE MENU TO 30% , CREATING A SMOOTH EFFECT :  */

.toggler:checked ~ .menu{
    width: 40%;
}

/* STYLING THE LIST :  */

.menu-container {
  height: 100%;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}

.menu >  div > nav {
    display: flex;
    flex-direction: column;
    top: 0px;
    z-index: 2;

/* HIDDEN INITIALLY  :  */

    visibility: hidden;
}

.menu > div > nav {
    list-style: none;
}

/* Fix this reference */
.menu > div > nav > a{
    color: whitesmoke;
    text-decoration: none;
    font-size: 1rem;
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    /* padding: 1rem; */
    margin-right: 2rem;
    width: 100%;
    text-align: left;
    z-index: 2;
}

/* WHEN THE TOGGLER IS CHECKED, CHANGE THE VISIBILITY TO VISIBLE :  */

.toggler:checked ~ .menu > div > nav{
    transition: visibility 0.4s ease;
    transition-delay: 0.1s;
    visibility: visible;
}


.toggler:checked ~ .menu > div > nav > a { 
  border-left: 4px solid white;
  width: 100%;
  min-height: 3rem;
}


.toggler:checked ~ .menu > div > nav > a:hover{
    color: darkblue;
    /* text-decoration: underline; */
    border-left: 4px solid gray;
    background: lightgrey;
}


/*  */
  
}

